--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="About.css">
-
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merienda&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
     <div class="nav-bar">
         <ul>
             <li><a href="about.html">About</a></li>
@@ -19,27 +21,16 @@
             <li><a href="index.html">Home</a></li>
         </ul>
     </div>
-    <div class="box">
-        <img src="Polish_20200324_211455484.png" class="box-img">
-        <h1>Abdinasir</h1>
-        <h5>Front End Developer</h5>
-        <p>
-            I love learning how to code. I am passionate to be Computer Science.
-            last Covid-19 break I build this website and two other websites and
-            I enjoyed to code and google some stuff I don't know because
-            learning is failing many and correct it.
-        </p>
 
-        <ul>
-            <li><a href="https://github.com/AbdinasirM"> <span> <i class="fa fa-github" aria-hidden="true"></i> </span>
-                </a></li>
-            <li><a href="https://www.youtube.com/channel/UC9izZ4Xs4xlTgknbK0Z9S4g"><i class="fa fa-youtube-play"
-                        aria-hidden="true"></i></a></li>
-
-        </ul>
+    <div class="rain">
 
 
-
+        <div class="welcome">
+            <h1>Abdinasir</h1>
+        </div>
+        <div class="welcome">
+            <h2><span>Student </span> Photographer</h2>
+        </div>
     </div>
 
 </body>
